nav link fixed on mobile screen

--- a/advance-research/style.css
+++ b/advance-research/style.css
@@ -1,5 +1,5 @@
 #sync1 .item {
-    height: 60vh;
+    height: 60dvh;
 }
 
 @media screen and (max-width: 991px) {
