--- a/digital/style.css
+++ b/digital/style.css
@@ -1,5 +1,5 @@
 #sync1 .item {
-    height: 70vh;
+    height: 70dvh;
 }
 
 @media screen and (min-width: 992px){
@@ -55,7 +55,7 @@
         top: 75%;
     }
     #sync1 .item {
-        height: 30vh;
+        height: 30dvh;
     }
     .digital-hero {
         background: var(--primary-color);
